fix typo in /moviesdatabase/query

--- a/docs/howtos/moviesdatabase/manage/index.manage.mdx
+++ b/docs/howtos/moviesdatabase/manage/index.manage.mdx
@@ -7,7 +7,7 @@ slug: /howtos/moviesdatabase/manage
 
 ### Listing and inspecting the indexes
 
-The `FT._LIST` command provides a list of all RediSearch indexes in your database:
+The `FT._LIST` command provides a list of all indexes in your database:
 
 ```
 > FT._LIST
