--- a/docs/howtos/moviesdatabase/query/index-query.mdx
+++ b/docs/howtos/moviesdatabase/query/index-query.mdx
@@ -82,7 +82,7 @@ Adding the string `-jedi` (minus) will ask the query engine not to return values
 
 **Example : _All the movies that contains the string "`gdfather` using fuzzy search"_**
 
-As you can see the word godfather contains a speelling error, it can however be matched using [fuzzy matching](https://oss.redis.com/redisearch/Query_Syntax/#fuzzy_matching). Fuzzy matches are performed based on [Levenshtein distance](https://en.wikipedia.org/wiki/Levenshtein_distance) (LD).
+As you can see the word godfather contains a spelling error, it can however be matched using [fuzzy matching](https://oss.redis.com/redisearch/Query_Syntax/#fuzzy_matching). Fuzzy matches are performed based on [Levenshtein distance](https://en.wikipedia.org/wiki/Levenshtein_distance) (LD).
 
 ```
 > FT.SEARCH idx:movie " %gdfather% " RETURN 2 title release_year
