debrand /moviesdatabase/import

--- a/docs/howtos/moviesdatabase/import/index-import.mdx
+++ b/docs/howtos/moviesdatabase/import/index-import.mdx
@@ -336,7 +336,7 @@ The movies have now been indexed, you can run the `FT.INFO "idx:movie"` command 
 
 **Create the `idx:theater` index:**
 
-This index will mostly be used to show the geospatial capabilties of RediSearch.
+This index will mostly be used to show the geospatial capabilties of search in Redis Stack.
 
 In the previous examples we have created indexes with 3 types:
 
