debrand /moviesdatabase/querymovies

--- a/docs/howtos/moviesdatabase/querymovies/index-querymovies.mdx
+++ b/docs/howtos/moviesdatabase/querymovies/index-querymovies.mdx
@@ -7,7 +7,7 @@ slug: /howtos/moviesdatabase/querymovies
 
 # Querying the Movie Dataset
 
-As described earlier in the tutorial, one of the goals of RediSearch is to provide rich querying capabilities such as:
+As described earlier in the tutorial, one of the goals of search and query in Redis Stack is to provide rich querying capabilities such as:
 
 - simple and complex conditions
 - sorting
@@ -16,7 +16,7 @@ As described earlier in the tutorial, one of the goals of RediSearch is to provi
 
 ### Conditions
 
-The best way to start to work with RediSearch query capabilities is to look at the various conditions options.
+The best way to start to work with Redis Stack query capabilities is to look at the various conditions options.
 
 #### Find all the movies that contain the word 'heat' or related to 'heat'
 
