debrand /moviesdatabase/sampleapp

--- a/docs/howtos/moviesdatabase/sampleapp/index-sampleapp.mdx
+++ b/docs/howtos/moviesdatabase/sampleapp/index-sampleapp.mdx
@@ -7,11 +7,11 @@ slug: /howtos/moviesdatabase/sampleapp
 
 # Application Development
 
-It is time now to see how to use RediSearch in your application.
+It is time now to see how to use search with Redis Stack in your application.
 
 ## Run the Sample Application
 
-The application and all the services, including RediSearch, are available as a Docker Compose application.
+The application and all the services, including Redis Stack, are available as a Docker Compose application.
 
 If you have not already downloaded the project, clone it:
 
@@ -32,7 +32,7 @@ To run the application:
 
 This Docker Compose will start:
 
-1. RediSearch instance on port 6380, and import all movies, actors and create indexes
+1. Redis Stack instance on port 6380, and import all movies, actors and create indexes
 1. The Java, Node and Python REST Services available on port 8085, 8086, 8087
 1. The frontend on port 8084
 
