/develop/node/nodecrashcourse/managingsuccess debranded

--- a/docs/develop/node/node-crash-course/managingsuccess/index-managingsuccess.mdx
+++ b/docs/develop/node/node-crash-course/managingsuccess/index-managingsuccess.mdx
@@ -19,4 +19,4 @@ We'll look at:
 - Using Redis as a cache in an Express application.
 - Scaling horizontally by using Redis as a session store for Express.
 - Scaling checkin processing with Redis Streams consumer groups.
-- Preventing duplicate checkins using probabilistic data structures and the RedisBloom module.
+- Preventing duplicate checkins using probabilistic data structures.
