/develop/node/nodecrashcourse/redisbloom debranded

--- a/docs/develop/node/node-crash-course/redisearch/index-redisearch.mdx
+++ b/docs/develop/node/node-crash-course/redisearch/index-redisearch.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-redisearch
 title: Indexing and Querying with Redis
-sidebar_label: Redis Search
+sidebar_label: Searching and Querying
 slug: /develop/node/nodecrashcourse/redisearch
 authors: [simon]
 ---
