--- a/docs/explore/redisinsight/index-redisinsight.mdx
+++ b/docs/explore/redisinsight/index-redisinsight.mdx
@@ -81,9 +81,9 @@ import RedisCard from '@theme/RedisCard';
 
 <div class="col">
   <RedisCard
-    title="RedisGraph Browser Visualization Tutorial"
+    title="Graph Browser Visualization Tutorial"
     imgPath=""
-    description="Query, Visualize and Manipulate Graphs using the RedisGraph Browser Visualization Tool"
+    description="Query, Visualize and Manipulate Graphs using the Graph Browser Visualization Tool"
     preview="redisinsight.png"
     page="/explore/redisinsight/redisgraph"
   />
@@ -91,9 +91,9 @@ import RedisCard from '@theme/RedisCard';
 
 <div class="col">
   <RedisCard
-    title="How To Use The RedisGears Browser Tool"
+    title="How To Use The Triggers and Functions Browser Tool"
     imgPath="redisinsight.png"
-    description="Write Your Serverless Redis function using the RedisGears Browser Tool"
+    description="Write Your Serverless Redis function using the Triggers and Functions Browser Tool"
     preview="redisinsight.png"
     page="/explore/redisinsight/redisgears"
   />
@@ -105,17 +105,17 @@ import RedisCard from '@theme/RedisCard';
 
 <div class="col">
   <RedisCard
-    title="RedisTimeSeries Data Management Tutorial"
-    description="Manage Redis time-series data using the RedisTimeSeries Browser Tool"
+    title="Time Series Data Management Tutorial"
+    description="Manage Redis time-series data using the Time Series Browser Tool"
     page="/explore/redisinsight/redistimeseries"
   />
 </div>
 
 <div class="col">
   <RedisCard
-    title="How To Use The RediSearch Browser Tool"
+    title="How To Use The Search Browser Tool"
     imgPath=""
-    description="Perform Database Search and Analytics using the RediSearch Browser Tool"
+    description="Perform Database Search and Analytics using the Search Browser Tool"
     preview="redisinsight.png"
     page="/explore/redisinsight/redisearch"
   />
