--- a/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
@@ -12,11 +12,11 @@ import Authors from '@theme/Authors';
 
 <Authors frontMatter={frontMatter} />
 
-RedisInsight is an intuitive and efficient GUI for Redis, allowing you to interact with your databases and manage your data—with built-in support for most popular Redis modules. It is a 100% free Redis GUI tool that allows you to visualise, monitor, and optimize while developing your applications with Redis
+RedisInsight is an intuitive and efficient GUI for Redis, allowing you to interact with your databases and manage your data—with built-in support for Redis Stack. It is a 100% free Redis GUI tool that allows you to visualise, monitor, and optimize while developing your applications with Redis.
 
 ![my image](redisinsight.gif)
 
-RedisInsight provides built-in support for the RedisJSON, RediSearch, RedisGraph, Redis Streams, and RedisTimeSeries modules to make it even easier to query, visualize, and interactively manipulate search indexes, graphs, streams, and time-series data.
+RedisInsight provides built-in support for the JSON, Search, Graph, Redis Streams, and Time Series data structures to make it even easier to query, visualize, and interactively manipulate search indexes, graphs, streams, and time-series data.
 
 A full-featured pure desktop GUI client, RedisInsight is available for Windows, macOS, and Linux and is fully compatible with Redis Enterprise. It works with any cloud provider as long as you run it on a host with network access to your cloud-based Redis server. RedisInsight makes it easy to discover cloud databases and configure connection details with a single click. It allows you to automatically add Redis Enterprise Software and Redis Enterprise Cloud databases.
 
@@ -217,12 +217,12 @@ On Windows and Mac, install docker version 18.03 or higher. You can run docker v
 
 :::
 
-#### Step 2. Run RedisInsight Docker image
+#### Step 2. Run Redis Stack Docker image
 
 Next, run the RedisInsight container. The easiest way is to run the following command:
 
 ```bash
- docker run -d -v redisinsight:/db -p 8001:8001 redislabs/redisinsight:latest
+docker run -d --name redis-stack -p 6379:6379 -p 8001:8001 redis/redis-stack:latest
 ```
 
 #### Step 3. Accessing RedisInsight
